--- a/EnglishMuffin/EnglishMuffin/res/layout/activity_main.xml
+++ b/EnglishMuffin/EnglishMuffin/res/layout/activity_main.xml
@@ -2,10 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+   
     android:background="@drawable/background"
     tools:context="com.ChrisPoncio.englishmuffin.MainActivity" >
 
@@ -23,8 +24,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
@@ -38,15 +39,17 @@
         android:layout_alignLeft="@+id/button1"
         android:layout_below="@+id/imageView1"
         android:layout_marginTop="62dp"
+        android:gravity="center"
         android:text="@string/phrases" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/imageView1"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="23dp"
+        android:gravity="center"
         android:text="@string/vocabulary" />
 
 </RelativeLayout>
